feat(email): add email route
